# tracing-workspace

./: .gitignore  Cargo.toml  README.md  TODOs.md  sample-trace-data.jsonl
.ci/: tpfs.yaml
managed-tracing/: Cargo.toml  README.md  rustfmt.toml
managed-tracing/src/: main.rs
opentelemetry-file/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
opentelemetry-file/.cargo/: config
opentelemetry-file/.ci/: custom-templates.yaml
opentelemetry-file/src/: lib.rs  main.rs
opentelemetry-json/: Cargo.toml
opentelemetry-json/examples/: export-to-jsonl.rs
opentelemetry-json/src/: exporter.rs  lib.rs  pipeline.rs
trace-data-uploader/: .gitignore  Cargo.toml  README.md
trace-data-uploader/.ci/: custom-jobs.yaml  tpfs-job-overrides.yaml
trace-data-uploader/examples/: upload-to-jaeger.rs
trace-data-uploader/src/: cli.rs  error.rs  input_data.rs  lib.rs  main.rs  uploader.rs
