[package]
authors = ["Ankit Gupta <ankit@transparent.us>"]
name = "opentelemetry-json"
version = "0.1.0"
edition = "2018"

[dependencies]
thiserror = "1.0"
opentelemetry = { version = "0.16.0", features = ["serialize"] }
async-trait = "0.1"
serde_json = "1.0"


[dev-dependencies]
tracing = { version = "0.1.28", features = ["log"] }
tracing-opentelemetry = "0.16.0"
tracing-subscriber = { version = "0.3" }
